# data-analysis-template

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _setup.py  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
conf/: base.yml  config.yml  local.yml
docs/source/: index.md  reference.md
exploration/: example.ipynb
src/: environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py
src/project/: utilities.py
src/tests/: test_utilities.py
