[metadata]
name = project
version = attr: project.__version__
description = My package description
license = MIT License

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    fsspec
    pyyaml

[options.extras_require]
dev = 
    pylint
    rope
    black
    pydocstyle
    isort
    pre-commit
    mkdocs
    mkdocs-material
    mkdocstrings
test =
    pytest
    pytest-cov
[options.packages.find]
exclude =
    tests

[flake8]
max-line-length=88
extend-ignore=E203
